--- a/manage_bill.html
+++ b/manage_bill.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="css/easy-autocomplete.themes.min.css">
 
     <script type="text/javascript" src="js/jquery.alphanumeric.js"></script>
+    <link rel="stylesheet" href="css/easy-loading.css">
+    <script src="js/easy-loading.js"></script>
 
     <!-- Sidbar -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
@@ -145,8 +147,13 @@
                         },
                         cache: false,
                         crossDomain: true,
+                        beforeSend: function(){
+                          EasyLoading.show({                           
+                            text: "กำลังโหลด"                            
+                          });
+                        },
                         success: function (response) {
-
+                            EasyLoading.hide();
                             var obj = jQuery.parseJSON(response);
                             $.each(obj, function (i, field) {
 
@@ -391,7 +398,13 @@
                     },
                     cache: false,
                     crossDomain: true,
+                    beforeSend: function(){
+                      EasyLoading.show({                           
+                        text: "กำลังโหลด"                            
+                      });
+                    },
                     success: function (response) {
+                      EasyLoading.hide();
                         if (start == 0) {
                             //find max_item
                             var path = "http://150.95.26.163:8080/gitmew/php/get_max_order.php";
@@ -504,7 +517,13 @@
                         },
                         cache: false,
                         crossDomain: true,
+                        beforeSend: function(){
+                          EasyLoading.show({                           
+                            text: "กำลังโหลด"                            
+                          });
+                        },
                         success: function (response) {
+                            EasyLoading.hide();
                             if (start == 0) {
                                 //find max_item
                                 var path = "http://150.95.26.163:8080/gitmew/php/get_max_order.php";
