--- a/manage_cus.html
+++ b/manage_cus.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/easy-autocomplete.themes.min.css">
 
     <script type="text/javascript" src="js/jquery.alphanumeric.js"></script>
+    <link rel="stylesheet" href="css/easy-loading.css">
+    <script src="js/easy-loading.js"></script>
 
     <!-- Sidbar -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
@@ -111,13 +113,17 @@
                         cache: false,
                         crossDomain: true,
                         beforeSend: function() {
+                            EasyLoading.show({                           
+                                text: "กำลังโหลด"                            
+                            });
                             $("#pg-st").addClass('disabled');
                             $("#pg-nd").addClass('disabled');
                             $("#pg-rd").addClass('disabled');
                             $("#li-next").addClass('disabled');
-                            $("#li-prev").addClass('disabled');
+                            $("#li-prev").addClass('disabled');                            
                         },
                         success: function (response) {
+                            EasyLoading.hide();
                             var obj = jQuery.parseJSON(response);
                             $.each(obj, function (i, field) {            
 
@@ -293,14 +299,19 @@
                     },
                     cache: false,
                     crossDomain: true,
-                    beforeSend: function() {
-                            $("#pg-st").addClass('disabled');
-                            $("#pg-nd").addClass('disabled');
-                            $("#pg-rd").addClass('disabled');
-                            $("#li-next").addClass('disabled');
-                            $("#li-prev").addClass('disabled');
-                        },
+                    beforeSend: function() {                       
+                        EasyLoading.show({                           
+                            text: "กำลังโหลด"                            
+                        });                      
+                    
+                        $("#pg-st").addClass('disabled');
+                        $("#pg-nd").addClass('disabled');
+                        $("#pg-rd").addClass('disabled');
+                        $("#li-next").addClass('disabled');
+                        $("#li-prev").addClass('disabled');
+                    },
                     success: function (response) {
+                        EasyLoading.hide();
                         if (start == 0) {
                             //find max_item
                             var path = "http://150.95.26.163:8080/gitmew/php/get_max_cus.php";
@@ -380,6 +391,9 @@
                         cache: false,
                         crossDomain: true,
                         beforeSend: function() {
+                            EasyLoading.show({                           
+                                text: "กำลังโหลด"                            
+                            });
                             $("#pg-st").addClass('disabled');
                             $("#pg-nd").addClass('disabled');
                             $("#pg-rd").addClass('disabled');
@@ -387,6 +401,7 @@
                             $("#li-prev").addClass('disabled');
                         },
                         success: function (response) {
+                            EasyLoading.hide();
                             if (start == 0) {
                                 //find max_item
                                 var path = "http://150.95.26.163:8080/gitmew/php/get_max_cus.php";
