--- a/manage_shift.html
+++ b/manage_shift.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/easy-autocomplete.themes.min.css">
 
     <script type="text/javascript" src="js/jquery.alphanumeric.js"></script>
+    <link rel="stylesheet" href="css/easy-loading.css">
+    <script src="js/easy-loading.js"></script>
 
     <!-- Date Picker -->
     <link href="css/datepicker.css" rel="stylesheet">
@@ -131,6 +133,9 @@
                         cache: false,
                         crossDomain: true,
                         beforeSend: function() {
+                            EasyLoading.show({                           
+                                text: "กำลังโหลด"                            
+                            });
                             $("#pg-st").addClass('disabled');
                             $("#pg-nd").addClass('disabled');
                             $("#pg-rd").addClass('disabled');
@@ -138,6 +143,7 @@
                             $("#li-prev").addClass('disabled');
                         },
                         success: function (response) {
+                            EasyLoading.hide();
                             var obj = jQuery.parseJSON(response);
                             $.each(obj, function (i, field) {            
 
@@ -230,13 +236,17 @@
                     cache: false,
                     crossDomain: true,
                     beforeSend: function() {
-                            $("#pg-st").addClass('disabled');
-                            $("#pg-nd").addClass('disabled');
-                            $("#pg-rd").addClass('disabled');
-                            $("#li-next").addClass('disabled');
-                            $("#li-prev").addClass('disabled');
-                        },
+                        EasyLoading.show({                           
+                            text: "กำลังโหลด"                            
+                        });
+                        $("#pg-st").addClass('disabled');
+                        $("#pg-nd").addClass('disabled');
+                        $("#pg-rd").addClass('disabled');
+                        $("#li-next").addClass('disabled');
+                        $("#li-prev").addClass('disabled');
+                    },
                     success: function (response) {
+                        EasyLoading.hide();
                         if (start == 0) {
                             //find max_item
                             var path = "http://150.95.26.163:8080/gitmew/php/get_max_cash.php";
@@ -318,6 +328,9 @@
                         cache: false,
                         crossDomain: true,
                         beforeSend: function() {
+                            EasyLoading.show({                           
+                                text: "กำลังโหลด"                            
+                            });
                             $("#pg-st").addClass('disabled');
                             $("#pg-nd").addClass('disabled');
                             $("#pg-rd").addClass('disabled');
@@ -325,6 +338,7 @@
                             $("#li-prev").addClass('disabled');
                         },
                         success: function (response) {
+                            EasyLoading.hide();
                             if (start == 0) {
                                 //find max_item
                                 var path = "http://150.95.26.163:8080/gitmew/php/get_max_cash.php";
