transfer and update bill_info

--- a/bill_info.html
+++ b/bill_info.html
@@ -240,7 +240,7 @@
                 buttons: {
                   formSubmit: {
                     text: 'ตกลง',
-                    btnClass: 'btn-danger',
+                    btnClass: 'btn-success',
                     action: function () {
                       //console.log($("#txt-area").val());
                     }
@@ -994,7 +994,7 @@
                 buttons: {
                   formSubmit: {
                     text: 'ตกลง',
-                    btnClass: 'btn-danger',
+                    btnClass: 'btn-success',
                     action: function () {
                       //console.log($("#txt-area").val());
                       $('.fa-check-square').prop('hidden', true); 
@@ -1015,7 +1015,7 @@
                 buttons: {
                   formSubmit: {
                     text: 'ตกลง',
-                    btnClass: 'btn-danger',
+                    btnClass: 'btn-success',
                     action: function () {
                       //console.log($("#txt-area").val());
                       $('.fa-check-square').prop('hidden', true); 
