--- a/pricebook.html
+++ b/pricebook.html
@@ -99,6 +99,7 @@
                         '</div>'+
                     '</li>';
                 $(".add-group").append(text_html);  
+                $("#add-name-"+add_index).focus();
             }
         }
 
