--- a/bill_info.html
+++ b/bill_info.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/easy-autocomplete.themes.min.css">
 
     <script type="text/javascript" src="js/jquery.alphanumeric.js"></script>
+    <link rel="stylesheet" href="css/easy-loading.css">
+    <script src="js/easy-loading.js"></script>
 
     <!-- Sidbar -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
@@ -73,8 +75,14 @@
                 url:"http://150.95.26.163:8080/gitmew/php/get_order_item.php",
                 method:"POST",
                 data:{'order_id':order_id},
+                beforeSend: function(){
+                    EasyLoading.show({                           
+                    text: "กำลังโหลด"                            
+                    });
+                },
                 success:function(data)
                 {
+                    EasyLoading.hide();
                     var obj = jQuery.parseJSON(data); 
                     console.log(obj);
                     branch_id = obj[0].branch_id;
