--- a/manage_cus.html
+++ b/manage_cus.html
@@ -56,14 +56,14 @@
             $("#li-next").addClass('disabled');
             $("#li-prev").addClass('disabled');
 
-            /*if(!localStorage.user_id){
+            if(!localStorage.user_id){
                 $.alert({
                 icon: 'fa fa-warning',
                 title: 'เตือน',
                 content: "กรุณาเข้าสู่ระบบก่อน"
                 });
                 window.location = "login.html";
-            } */  
+            }   
 
             if(localStorage.role == "user"){
                 $("#mb").remove();
