--- a/multi_unit.html
+++ b/multi_unit.html
@@ -186,6 +186,9 @@
           '<div class="col-1 nopd">'+
             '<input id="min-unit" type="text" class="form-control text-center" readonly value="'+$('#unit-'+arg).val()+'">'+
           '</div>'+
+          '<div class="col-1 text-center nopd">'+
+            '<button class="btn btn-danger"><i class="fa fa-trash"></i></button>'+
+          '</div>'+
         '</div>';
         $("#muti-"+arg).append(text_html);
         var options = {
